--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.11.3",
     "axios": "^1.13.2",
     "nuxt": "^4.3.0",
+    "pinia": "^3.0.4",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   }
